apps/backend-bff/manifest/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: backend-bff
  name: backend-bff
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend-bff
  template:
    metadata:
      labels:
        io.kompose.service: backend-bff
    spec:
      containers:
        - image: ghcr.io/startupnationlabs/spos/backend-bff:sha-bcc8181
          name: backend-bff
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      restartPolicy: Always
