apps/backend-bff/manifest/base/service.yml

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: backend-bff
  name: backend-bff
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: backend-bff
